<resources>
    <string name="app_name">TodoList</string>
    <string name="logo_image_desc">Todo List</string>
    <string name="edit_username_hint">username</string>
    <string name="edit_password_hint">password</string>
    <string name="login_btn_text">Login</string>
    <string name="error_desc">error</string>
    <string name="username_error_text">Username must be 3 ~ 12 letters or numbers</string>
    <string name="password_error_text">The password length must be 6 ~ 18 characters</string>
    <string name="user_not_found_message">user not exist!</string>
    <string name="password_error_message">password error!</string>
    <string name="user_already_login_file" translatable="false">userAlreadyLogin</string>
    <string name="user_already_login_key" translatable="false">loginKey</string>
    <string name="btn_back">Go back</string>
    <string name="date_button_text">Date</string>
    <string name="remind_text">Remind</string>
    <string name="btn_add_item">Add</string>
    <string name="remind_title_text">Title…</string>
    <string name="remind_desc_text">Description…</string>
    <string name="btn_save_remind_desc">Save Remind</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="btn_more">more</string>
    <string name="remind_count">%dreminds</string>
    <string name="channel_name">remind</string>
    <string name="channel_description">Todo remind</string>
    <string name="channel_id">todo_list_remind</string>
    <string name="remind_id_intent_key" translatable="false">remind_id</string>
    <string name="btn_logout_text">logout</string>
</resources>