<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ReminderItemActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_bar_layout"
        android:layout_width="@dimen/item_bar_layout_size"
        android:layout_height="@dimen/item_bar_layout_size"
        android:background="@drawable/item_bar_layout_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/item_detail_top_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:layout_marginStart="@dimen/btn_back_margin_start"
            android:background="@color/item_bar_background_color"
            android:contentDescription="@string/btn_back"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <CheckBox
            android:id="@+id/finish_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/finish_remind_check_box_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <Button
            android:id="@+id/btn_select_date"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_date_height"
            android:background="@drawable/date_button_background"
            android:stateListAnimator="@null"
            android:text="@string/date_button_text"
            android:textAllCaps="false"
            android:textColor="@color/btn_select_data_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/remind_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/SwitchCompatStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:track="@drawable/switch_track" />

        <TextView
            android:id="@+id/remind_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/remind_text_margin_end"
            android:text="@string/remind_text"
            android:textColor="@color/btn_select_data_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/remind_switch"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/item_detail_top_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <EditText
        android:id="@+id/remind_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/remind_title_height"
        android:autofillHints="Title"
        android:background="@drawable/remind_edit_text_background"
        android:hint="@string/remind_title_text"
        android:inputType="text"
        android:paddingStart="@dimen/remind_title_text_padding"
        android:paddingEnd="@dimen/remind_title_text_padding"
        android:textColor="@color/remind_title_text_color"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/item_detail_top_guideline" />

    <EditText
        android:id="@+id/remind_desc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/remind_desc_height"
        android:autofillHints="Description"
        android:background="@drawable/remind_edit_text_background"
        android:gravity="start"
        android:hint="@string/remind_desc_text"
        android:inputType="text"
        android:lineSpacingExtra="@dimen/remind_desc_line_space"
        android:paddingStart="@dimen/remind_desc_padding"
        android:paddingTop="@dimen/remind_desc_padding"
        android:paddingEnd="@dimen/remind_desc_padding"
        android:textColor="@color/remind_title_text_color"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remind_title" />

    <ImageButton
        android:id="@+id/btn_save_remind"
        android:layout_width="@dimen/btn_save_remind_size"
        android:layout_height="@dimen/btn_save_remind_size"
        android:layout_marginEnd="@dimen/btn_save_remind_margin"
        android:layout_marginBottom="@dimen/btn_save_remind_margin"
        android:background="@color/btn_save_background_color"
        android:contentDescription="@string/btn_save_remind_desc"
        android:src="@mipmap/check_selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/calendar_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/date_select_margin_top"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/date_select_background"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>